use database to save the imformation of users and passwords; design a new look for the logging system

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,4 @@
 	<h2>Login</h2>
-	{% if error %}<p class=error><strong>Error:</strong> {{ error }}{% endif %}
 	<form action="{{ url_for('login') }}" method=post>
 	<dl>
 		<dt>Username:
@@ -9,3 +8,4 @@
 		<dd><input type=submit value=Login>
 	</dl>
 	</form>
+	<a href='/register'>Register</a>
